[project]
name = "comfyui-depthpro"
description = "Custom nodes to run apple/DepthPro model."
version = "1.0.0"
license = { text = "Apache License 2.0" }
dependencies = ["timm>=0.9.16", "numpy<2"]

[project.urls]
Repository = "https://github.com/alexisrolland/ComfyUI-DepthPro"

[tool.comfy]
PublisherId = "alexisrolland"
DisplayName = "ComfyUI-DepthPro"
Icon = ""
